refactor medicalRecordService 3 methods into 1 and reajust tests and code